# stm32f303-cmake-template

./: .gitignore  CMakeLists.txt  README.md  fwinstall.sh
3rd/: stm32f30x_conf.h
3rd/CMSIS-FreeRTOS/Config/ARMCM/: FreeRTOSConfig.h
3rd/SPL/inc/: stm32f30x_gpio.h  stm32f30x_rcc.h
src/: main.c  script.ld
